--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -4,20 +4,26 @@
   
   
   <template name="mainContainer">
-      <div class="container">
-          <header>
-              <h1>Todo List</h1>
-          </header>
-  
-          {{> form }}
-  
-          <ul>
-              {{#each tasks}}
-                  {{> task}}
-              {{/each}}
-          </ul>
-      </div>
-  </template>
+    <div class="app">
+        <header>
+            <div class="app-bar">
+                <div class="app-header">
+                    <h1>📝️ To Do List</h1>
+                </div>
+            </div>
+        </header>
+
+        <div class="main">
+            {{> form }}
+
+            <ul class="tasks">
+                {{#each tasks}}
+                    {{> task}}
+                {{/each}}
+            </ul>
+        </div>
+    </div>
+</template>
   
   <template name="form">
       <form class="task-form">
