--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -4,35 +4,43 @@
   
   
   <template name="mainContainer">
-    <div class="app">
-        <header>
-            <div class="app-bar">
-                <div class="app-header">
-                    <h1>📝️ To Do List {{incompleteCount}}</h1>
-                </div>
-            </div>
-        </header>
-      
+      <div class="app">
+          <header>
+              <div class="app-bar">
+                  <div class="app-header">
+                      <h1>📝️ To Do List {{incompleteCount}}</h1>
+                  </div>
+              </div>
+          </header>
   
-        <div class="main">
-            {{> form }}
-            <div class="filter">
-              <button id="hide-completed-button">
-                  {{#if hideCompleted}}
-                          Show All
-                  {{else}}
-                          Hide Completed
-                  {{/if}}
-              </button>
+          <div class="main">
+              {{#if isUserLogged}}
+                  <div class="user">
+                      {{getUser.username}} 🚪
+                  </div>
+                  {{> form }}
+  
+                  <div class="filter">
+                      <button id="hide-completed-button">
+                          {{#if hideCompleted}}
+                                  Show All
+                          {{else}}
+                                  Hide Completed
+                          {{/if}}
+                      </button>
+                  </div>
+  
+                  <ul class="tasks">
+                      {{#each tasks}}
+                          {{> task}}
+                      {{/each}}
+                  </ul>
+              {{else}}
+                  {{> login }}
+              {{/if}}
           </div>
-            <ul class="tasks">
-                {{#each tasks}}
-                    {{> task}}
-                {{/each}}
-            </ul>
-        </div>
-    </div>
-</template>
+      </div>
+  </template>
   
   <template name="form">
       <form class="task-form">
