--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -29,6 +29,10 @@
                           {{/if}}
                       </button>
                   </div>
+
+                  {{#if isLoading}}
+                    <div class="loading">Loading...</div>
+                {{/if}}
   
                   <ul class="tasks">
                       {{#each tasks}}
